[package]
name = "tiered-ttl-cache"
version = "0.1.0"
edition = "2024"
description = "A flexible, multi-tiered caching library with Time-To-Live (TTL) support."
license = "MIT"
repository = "https://github.com/Anhui-tqhuang/tiered-ttl-cache"
readme = "README.md"
keywords = ["cache", "ttl", "tiered", "async"]
categories = ["caching", "data-structures"]

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
memmap2 = "0.9.9"
moka = { version = "0.12.12", features = ["future"] }
tokio = { version = "1.49.0", features = ["full", "io-util"] }
uuid = { version = "1.19.0", features = ["v4"] }
